# ESP32-S3-RLCD-4.2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: main.yml
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/01_WIFI_AP/: CMakeLists.txt  sdkconfig
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/01_WIFI_AP/main/: softap_example_main.c
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/02_WIFI_STA/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/02_WIFI_STA/components/user_app/: user_app.h
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/03_ADC_Test/components/port_bsp/: CMakeLists.txt  adc_bsp.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/03_ADC_Test/components/user_app/: user_app.cpp  user_app.h
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/03_ADC_Test/main/: CMakeLists.txt
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/04_I2C_PCF85063/: CMakeLists.txt
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/04_I2C_PCF85063/components/port_bsp/: i2c_bsp.h
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/04_I2C_PCF85063/components/user_app/: CMakeLists.txt
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/05_I2C_SHTC3/: CMakeLists.txt  sdkconfig.defaults
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/05_I2C_SHTC3/main/: main.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/06_SD_Card/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/07_Audio_Test/: sdkconfig.defaults
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/07_Audio_Test/components/port_bsp/: CMakeLists.txt
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/07_Audio_Test/main/: main.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/08_LVGL_V8_Test/: CMakeLists.txt
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/09_LVGL_V9_Test/main/: user_config.h
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/: sdkconfig.old
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/components/app_bsp/: ble_scan_bsp.h  esp_wifi_bsp.c
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/components/port_bsp/: CMakeLists.txt  adc_bsp.cpp  button_bsp.h  codec_bsp.cpp  codec_bsp.h  display_bsp.cpp  display_bsp.h  i2c_bsp.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/components/user_app/: user_app.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/main/: main.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/11_WeatherClock/: sdkconfig
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/11_WeatherClock/components/port_bsp/: i2c_equipment.cpp
ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/11_WeatherClock/main/: idf_component.yml
RLCD_CLOCK/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
RLCD_CLOCK/components/ExternLib/codec_board/: codec_init.c
RLCD_CLOCK/components/ExternLib/esp_codec_dev/platform/: audio_codec_data_i2s.c
RLCD_CLOCK/components/app_bsp/: lvgl_bsp.cpp  lvgl_bsp.h
RLCD_CLOCK/components/port_bsp/: CMakeLists.txt  codec_bsp.cpp  codec_bsp.h  display_bsp.cpp  display_bsp.h  i2c_equipment.cpp
RLCD_CLOCK/components/port_bsp/pcm/: hourly_chime.pcm
RLCD_CLOCK/main/: CMakeLists.txt  boot_anim.c  boot_anim.h  dseg_digits.h  main.cpp  qweather_icons_36.c  status_gif_60.h  ui_icons.h  zh_font_16.c
RLCD_CLOCK/simulator/: CMakeLists.txt  README.md  lv_conf.h  main.cpp
components/ExternLib/codec_board/: board_cfg.txt  codec_init.c
components/app_bsp/: CMakeLists.txt  lvgl_bsp.cpp  lvgl_bsp.h
components/port_bsp/: CMakeLists.txt  codec_bsp.cpp  codec_bsp.h  display_bsp.cpp  display_bsp.h  i2c_bsp.cpp  i2c_bsp.h  i2c_equipment.cpp  i2c_equipment.h
components/port_bsp/pcm/: chime_1.pcm  chime_2.pcm  chime_3.pcm  chime_4.pcm  hourly_chime.pcm  wifi_prompt.pcm
demo/: CMakeLists.txt
demo/components/app_bsp/: lvgl_bsp.cpp
demo/components/port_bsp/: CMakeLists.txt
demo/main/: CMakeLists.txt  main.cpp
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/01_WIFI_AP/: sdkconfig.defaults  sdkconfig.old
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/02_WIFI_STA/: sdkconfig
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/02_WIFI_STA/main/: main.c
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/03_ADC_Test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/03_ADC_Test/main/: main.cpp
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/05_I2C_SHTC3/: sdkconfig
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/06_SD_Card/main/: CMakeLists.txt  user_config.h
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/07_Audio_Test/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/08_LVGL_V8_Test/: sdkconfig
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/09_LVGL_V9_Test/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/: CMakeLists.txt  sdkconfig
examples/esp-idf/ESP32-S3-RLCD-4.2-Demo/02_ESP-IDF/10_FactoryProgram/components/app_bsp/: CMakeLists.txt  ble_scan_bsp.c  esp_wifi_bsp.h
main/: CMakeLists.txt  idf_component.yml
main/assets/: boot_anim.c  boot_anim.h  clock_gallery_images.h  dseg_digits.h  qweather_icons_36.c  status_gif_60.h  ui_icons.h
main/audio/: audio_services.cpp  audio_services.h
main/core/: app_state.cpp  app_state.h  main.cpp
main/input/: input_tasks.cpp  input_tasks.h
main/network/: daily_saying.cpp  http_client.cpp  network_config.cpp  network_diagnostics.cpp  network_services.cpp  network_services.h  ntp_services.cpp  qweather_ca.h  qweather_client.cpp  wifi_portal.cpp
main/ota/: ota_services.cpp  ota_services.h
main/sensors/: battery_services.cpp  power_services.cpp  sensor_history.cpp  sensor_services.cpp  sensor_services.h
main/storage/: custom_assets.cpp  custom_assets.h
main/ui/: calendar_lunar.cpp  calendar_lunar.h  ui_boot_settings.cpp  ui_calendar.cpp  ui_canvas.cpp  ui_clock.cpp  ui_common.cpp  ui_flip_clock.cpp  ui_gallery.cpp  ui_history.cpp  ui_page_state.cpp  ui_views.cpp  ui_views.h  ui_weather_board.cpp  ui_work_status.cpp
scripts/: generate_previews.sh  generate_status_gif.py  publish_gitea_release.sh  release_version.sh
simulator/: CMakeLists.txt  README.md  lv_conf.h  main.cpp
(+28 files in other folders)
