# 固件主组件的源码清单和构建依赖配置。
idf_component_register(
    SRCS
        "core/main.cpp"
        "core/app_state.cpp"
        "ui/ui_canvas.cpp"
        "ui/ui_common.cpp"
        "ui/ui_work_status.cpp"
        "ui/ui_page_state.cpp"
        "ui/ui_boot_settings.cpp"
        "ui/ui_history.cpp"
        "ui/ui_gallery.cpp"
        "ui/ui_flip_clock.cpp"
        "ui/ui_calendar.cpp"
        "ui/ui_weather_board.cpp"
        "ui/ui_clock.cpp"
        "ui/ui_views.cpp"
        "ui/calendar_lunar.cpp"
        "storage/custom_assets.cpp"
        "network/network_config.cpp"
        "network/wifi_portal.cpp"
        "network/ntp_services.cpp"
        "network/http_client.cpp"
        "network/qweather_client.cpp"
        "network/daily_saying.cpp"
        "network/network_diagnostics.cpp"
        "network/network_services.cpp"
        "ota/ota_services.cpp"
        "sensors/power_services.cpp"
        "sensors/battery_services.cpp"
        "sensors/sensor_history.cpp"
        "sensors/sensor_services.cpp"
        "audio/audio_services.cpp"
        "input/input_tasks.cpp"
        "assets/boot_anim.c"
        "assets/qweather_icons_36.c"
        "assets/zh_font_16.c"
    INCLUDE_DIRS
        "."
        "core"
        "ui"
        "network"
        "ota"
        "sensors"
        "audio"
        "input"
        "storage"
        "assets"
    REQUIRES
        app_bsp
        port_bsp
        lvgl__lvgl
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp_http_server
        esp_https_ota
        lwip
        app_update
        esp_timer
        esp_pm
        esp_adc
        esp_driver_gpio
        json
        mbedtls)

string(TIMESTAMP WEATHER_CLOCK_BUILD_DATE "%Y-%m-%d")
target_compile_definitions(${COMPONENT_LIB} PRIVATE WEATHER_CLOCK_BUILD_DATE="${WEATHER_CLOCK_BUILD_DATE}")
