idf_component_register(
    SRCS
        "main.cpp"
        "qweather_icons_36.c"
        "zh_font_16.c"
    INCLUDE_DIRS "."
    REQUIRES
        app_bsp
        port_bsp
        lvgl__lvgl
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_client
        esp_http_server
        esp_timer
        esp_pm
        esp_adc
        esp_driver_gpio
        json
        mbedtls)
